apps/base/hermes-agent/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hermes-agent
  namespace: hermes-agent
  annotations:
    gethomepage.dev/href: 'https://hermes.homelab.cs-ol.de'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/description: AI agent (Telegram, Discord)
    gethomepage.dev/group: Primary Services
    gethomepage.dev/icon: mdi-robot-happy
    gethomepage.dev/app: hermes-agent
    gethomepage.dev/name: Hermes Agent
    gethomepage.dev/pod-selector: ''
    gethomepage.dev/weight: '30'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hermes.homelab.cs-ol.de`)
      services:
        - kind: Service
          name: hermes-agent
          port: 80
  tls: {}
